change package name in readme

--- a/docs/content/0-getting-started/1-installation.mdx
+++ b/docs/content/0-getting-started/1-installation.mdx
@@ -9,11 +9,11 @@
 ## Install Corsair
 
 ```bash
-npm install corsair
+npm install @corsair-ai/core
 # or
-pnpm add corsair
+pnpm add @corsair-ai/core
 # or
-yarn add corsair
+yarn add @corsair-ai/core
 ```
 
 ## Initialize Corsair
