--- a/docs/content/2-integrations/0-next.mdx
+++ b/docs/content/2-integrations/0-next.mdx
@@ -5,7 +5,7 @@ Corsair integrates seamlessly with Next.js App Router and Pages Router.
 ## Installation
 
 ```bash
-npm install corsair
+npm install @corsair-ai/core
 npx corsair init --framework next
 ```
 
