--- a/docs/content/2-integrations/1-vite.mdx
+++ b/docs/content/2-integrations/1-vite.mdx
@@ -5,7 +5,7 @@ Corsair works with Vite for fast development and optimized builds.
 ## Installation
 
 ```bash
-npm install corsair
+npm install @corsair-ai/core
 npx corsair init
 ```
 
