--- a/docs/content/2-integrations/2-hono.mdx
+++ b/docs/content/2-integrations/2-hono.mdx
@@ -5,7 +5,7 @@ Corsair integrates with Hono for lightweight, edge-compatible APIs.
 ## Installation
 
 ```bash
-npm install corsair hono
+npm install @corsair-ai/core hono
 npx corsair init --framework hono
 ```
 
