--- a/docs/content/2-integrations/3-prisma.mdx
+++ b/docs/content/2-integrations/3-prisma.mdx
@@ -5,7 +5,7 @@ Corsair integrates natively with Prisma for type-safe database operations.
 ## Installation
 
 ```bash
-npm install corsair prisma @prisma/client
+npm install @corsair-ai/core prisma @prisma/client
 npx corsair init --orm prisma
 ```
 
