--- a/docs/content/2-integrations/4-drizzle.mdx
+++ b/docs/content/2-integrations/4-drizzle.mdx
@@ -5,7 +5,7 @@ Corsair integrates with Drizzle ORM for lightweight, type-safe database operatio
 ## Installation
 
 ```bash
-npm install corsair drizzle-orm
+npm install @corsair-ai/core drizzle-orm
 npx corsair init --orm drizzle
 ```
 
