--- a/docs/content/concepts/hooks.mdx
+++ b/docs/content/concepts/hooks.mdx
@@ -219,7 +219,7 @@ slack({
 })
 ```
 
-See [Webhooks](/docs/getting-started/webhooks) for more on webhook processing.
+See [Webhooks](/docs/webhooks) for more on webhook processing.
 
 ## Context Object
 
