--- a/docs/content/concepts/webhooks.mdx
+++ b/docs/content/concepts/webhooks.mdx
@@ -169,5 +169,5 @@ webhookHooks: {
 }
 ```
 
-See [Hooks](/docs/getting-started/hooks) for the full hooks documentation.
+See [Hooks](/docs/hooks) for the full hooks documentation.
 
