--- a/docs/content/getting-started/introduction.mdx
+++ b/docs/content/getting-started/introduction.mdx
@@ -76,9 +76,9 @@ npm install corsair
 
 ## Next Steps
 
-- [Multi-Tenancy](/docs/multi-tenancy) — Isolate tenant data automatically
-- [Error Handling](/docs/error-handling) — Graceful failures and retries
-- [Webhooks](/docs/webhooks) — One endpoint for all webhooks
-- [Database](/docs/database) — Four tables, unlimited integrations
-- [Hooks](/docs/hooks) — Customize API and webhook behavior
+- [Multi-Tenancy](/multi-tenancy) — Isolate tenant data automatically
+- [Error Handling](/error-handling) — Graceful failures and retries
+- [Webhooks](/webhooks) — One endpoint for all webhooks
+- [Database](/database) — Four tables, unlimited integrations
+- [Hooks](/hooks) — Customize API and webhook behavior
 
