--- a/docs/content/plugins/slack.mdx
+++ b/docs/content/plugins/slack.mdx
@@ -983,10 +983,15 @@ const channel = await corsair.slack.db.channels.findByResourceId("C0123456789");
 // List all
 const channels = await corsair.slack.db.channels.list({ limit: 50 });
 
-// Search
-const results = await corsair.slack.db.messages.search({
-    query: "project update",
+// Search by data fields
+const results = await corsair.slack.db.channels.search({
+    data: { name: "general" },
     limit: 20,
+});
+
+// Search with contains (LIKE)
+const partialMatch = await corsair.slack.db.channels.search({
+    data: { name: { contains: "sdk" } },
 });
 
 // Upsert
