--- a/docs/content/adapters/kysely.mdx
+++ b/docs/content/adapters/kysely.mdx
@@ -110,8 +110,8 @@ The Kysely adapter supports transactions:
 
 ```ts title="example.ts"
 await corsair.slack.db.messages.transaction(async (trx) => {
-    await trx.upsert("msg_1", { text: "Hello" });
-    await trx.upsert("msg_2", { text: "World" });
+    await trx.upsertByEntityId("msg_1", { text: "Hello" });
+    await trx.upsertByEntityId("msg_2", { text: "World" });
 });
 ```
 
